Switched to JDK 17